@@ -1410,6 +1410,16 @@ Site Footer
 	margin-bottom: 0;
 }
 
+/*Facebook Like Box Responsiveness*/
+ 
+#fb-root {
+display: none;
+}
+ 
+.fb_iframe_widget, .fb_iframe_widget span, .fb_iframe_widget span iframe[style] {
+width: 100% !important;
+}
+
 
 /*
 Media Queries
